# init.rs

./: Cargo.toml  Justfile  README.md
src/: autocmds.rs  completers.rs  lib.rs  mappings.rs  options.rs  ripgrep.rs
