[package]
name = "init-rs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
nvim-oxi = { version = "0.4", features = ["neovim-0-9"] }
# nvim-sous_chef-complete_fn = { git = "ssh://git@github.com/turboladen/nvim-sous_chef" }
nvim-sous_chef-complete_fn = { path = "../nvim-sous_chef/crates/complete_fn" }
nvim-sous_chef-logger = { path = "../nvim-sous_chef/crates/logger" }
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
